welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: only classes can have declared but undefined members
	def faireMotif(c1:Color,c2:Color);{
            ^PatternPicture:3: error: not found: value c1
		setCouleurBrosse(c1:Color);
                                 ^PatternPicture:9: error: not found: value c2
		setCouleurBrosse(c2:Color);
                                 ^PatternPicture:17: error: not found: value c1
		setCouleurBrosse(c1:Color);
                                 ^PatternPicture:20: error: not found: value à
		avance();droite();avance(à);
                                         ^PatternPicture:24: error: not found: value c2
		setCouleurBrosse(c2:Color);
                                 ^