welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def faireMotif(c1:Color,c2:Color);{
		setCouleurBrosse(c1:Color);
		baisseBrosse();
		leveBrosse();
		gauche();avance();droite();avance();
		baisseBrosse();
		leveBrosse();
		setCouleurBrosse(c2:Color);
		gauche();avance();
		baisseBrosse;
		leveBrosse();
		avance();gauche();avance();
		baisseBrosse();
		leveBrosse();
		droite();avance();
		setCouleurBrosse(c1:Color);
		baisseBrosse();
		leveBrosse();
		avance();droite();avance(à);
		baisseBrosse();
		leveBrosse();
		gauche();avance();
		setCouleurBrosse(c2:Color);
		baisseBrosse();
		leveBrosse();
		avance();gauche();avance();
		baisseBrosse();
		leveBrosse();
		droite();avance();droite();avance();
	}
	faireMotif(Color.GREEN,Color.YELLOW);
}
